# One-Billion-Row-Challenge-Python

./: .gitignore  README.md  mark.md  pyproject.toml
data/: stations.txt
src/: create_measurements.py  using_duckdb.py  using_polars.py
