[project]
name = "estudos-4"
version = "0.1.0"
description = ""
authors = [
    {name = "gabriel",email = "80714107+gabriel3113@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.32.1,<2.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "glob2 (>=0.7,<0.8)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
